--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "editor"]
-	path = editor
+[submodule "src/editor"]
+	path = src/editor
 	url = git@github.com:b7hub/vsc-base-markdown.git
